force-app/main/default/objects/ffirule__IntegrationRuleLog__c/ffirule__IntegrationRuleLog__c.object-meta.xml
<CustomObject>
    <customHelpPage>ffirule__helpintegrationrulelog</customHelpPage>
    <label>ClickLink Log</label>
    <nameField>
        <displayFormat>SOLOG-{00000000}</displayFormat>
        <label>Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ClickLink Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>