force-app/main/default/objects/ffirule__IntegrationRuleLog__c/fields/ffirule__IntegrationRuleButton__c.field-meta.xml
<CustomField>
    <fullName>ffirule__IntegrationRuleButton__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ClickLink Button</label>
    <referenceTo>ffirule__IntegrationRuleButton__c</referenceTo>
    <relationshipLabel>ClickLink Logs</relationshipLabel>
    <relationshipName>IntegrationRuleLogs</relationshipName>
    <type>Lookup</type>
</CustomField>