force-app/main/default/objects/ffirule__IntegrationRuleLog__c/fields/ffirule__Summary__c.field-meta.xml
<CustomField>
    <fullName>ffirule__Summary__c</fullName>
    <label>Summary</label>
    <type>TextArea</type>
</CustomField>