force-app/main/default/objects/ffirule__IntegrationRuleLog__c/fields/ffirule__User__c.field-meta.xml
<CustomField>
    <fullName>ffirule__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>IntegrationRuleLogs</relationshipName>
    <type>Lookup</type>
</CustomField>